# proj_hail_aikr

./: .gitignore  README.md  dashboard.html  index.html  landing.html  package-lock.json  package.json  requirements.txt  research_agent.jsx
backend/: .env.example  README.md  clear.py  pyproject.toml  reindex.py  reindex_manual.py  reingest.py  stress_test_outputs.py  test_catalog.py  test_chat.py  tmp_debug.py
backend/src/research_agent/: __init__.py  api.py  config.py  runtime.py  schemas.py
backend/src/research_agent/graph/: __init__.py  builder.py  state.py
backend/src/research_agent/retrieval/: __init__.py  catalog.py  chunking.py  dense.py  embeddings.py  ingestion.py  sparse.py
backend/src/research_agent/services/: __init__.py  gemini_text.py  groq_text.py  openrouter_text.py  style_memory.py  text_generation.py  xai_text.py
backend/src/research_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: architecture.md  architecture_walkthrough.md  graph_state.md  graph_state.mmd
scripts/: smoke_local.ps1
